# bodge-glfw

./: .appveyor.yml  .gitignore  .travis.yml  README.md  bodge-glfw-bindings.asd  bodge-glfw.asd  bodge_glfw.h  claw.lisp  example.lisp  glfw.lisp  libglfw.lisp  packages.lisp  regen-spec.lisp  update-specs.sh
bindings/: powerpc64-pc-linux-gnu.lisp  x86_64-apple-darwin-gnu.lisp  x86_64-pc-linux-gnu.lisp  x86_64-pc-windows-gnu.lisp  x86_64-w64-mingw32.lisp
lib/: CMakeLists.txt
spec/: bodge_glfw.i686-apple-darwin-gnu.spec  bodge_glfw.i686-pc-linux-gnu.spec  bodge_glfw.i686-pc-windows-gnu.spec  bodge_glfw.x86_64-apple-darwin-gnu.spec  bodge_glfw.x86_64-pc-linux-gnu.spec  bodge_glfw.x86_64-pc-windows-gnu.spec
src/: claw.lisp  example.lisp  glfw.lisp  packages.lisp
src/spec/: BODGE-GLFW.i686-apple-darwin-gnu.spec  BODGE-GLFW.i686-pc-linux-gnu.spec  BODGE-GLFW.i686-pc-windows-gnu.spec  BODGE-GLFW.x86_64-apple-darwin-gnu.spec  BODGE-GLFW.x86_64-pc-linux-gnu.spec  BODGE-GLFW.x86_64-pc-windows-gnu.spec
util/: update-specs.sh
